<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Chronicles of WWII</string>
    <string name="add">Add</string>
    <string name="prep">Prepared</string>
    <string name="custom">Custom</string>
    <string name="welcome">Welcome!</string>
    <string name="start_campaign">Campaign</string>
    <string name="host">Make Host</string>
    <string name="join">Join game</string>
    <string name="new_scenario">Create new scenario</string>
    <string name="show_mission_list">List of Missions</string>
    <string name="choose_mission">Choose Mission</string>
    <string name="scenario_title">Title of the scanario</string>
    <string name="scenario_intro">Intro to the scenario</string>
    <string name="enemies">Enemies</string>
    <string name="infantry">Infantry</string>
    <string name="armored">Armored</string>
    <string name="artillery">Artillery</string>
    <string name="done">Done</string>
    <string name="load_game">Load game</string>
    <string name="waiting_for_accepted">Waiting for host to accept</string>
    <string name="cancel_request_for_accepted">Cancel request</string>
    <string name="choose_host_name">Type in host name</string>
    <string name="set_host_parameters">Set host parameters</string>
    <string name="default_mission">Play default mission</string>
    <string name="hostReady">Ready</string>
    <string name="overview">Overview</string>
    <string name="ipAddress">IP-Address: $</string>
    <string name="port">Port: </string>
    <string name="connect">Connect</string>
    <string name="clientName">Your name</string>
    <string name="finding">Finding</string>
    <string name="found">Found yay</string>
    <string name="not_found">No hosts found</string>
    <string name="turn_wifi">Please, turn on the Wi-Fi</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="error_start_listening">Error when start listening</string>
    <string name="waiting_for_connected">Waiting for connected</string>
    <string name="connection_refused">Connection refused</string>
    <string name="error_connectiong">Error when connecting</string>
    <string name="fill_the_gaps">Fill the gaps</string>
    <string name="resolve_failed">Resolve Failed</string>
    <string name="discovery_failed">Discovery Failed</string>
    <string name="you_won">You won!!! )))))</string>
    <string name="you_lose">You lose. (((((</string>


</resources>
