<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/scenario_title"
        android:inputType="textMultiLine">
    </EditText>

    <EditText
        android:id="@+id/intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/scenario_intro"
        android:inputType="textMultiLine"
        android:maxLines="3">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/enemies"
        android:textAlignment="center">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/nation1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>

            <EditText
                android:id="@+id/infantry1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/infantry">
            </EditText>
            <EditText
                android:id="@+id/armored1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/armored">
            </EditText>
            <EditText
                android:id="@+id/artillery1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/artillery">
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/nation2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>

            <EditText
                android:id="@+id/infantry2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/infantry">
            </EditText>
            <EditText
                android:id="@+id/armored2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/armored">
            </EditText>
            <EditText
                android:id="@+id/artillery2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/artillery">
            </EditText>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/ready"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done">

    </Button>
</LinearLayout>